--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -3,8 +3,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F8C8DC;
-}
+background-color: #F8C8DC;
+    background-image: url('../images/heart_background.jpg');
+    /*
 
 /* Position the "No" button absolutely within body */
 #noButton {
