--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #F8C8DC;
-    background-image: url('../images/light-blue-frame-with-office-supplies_23-2148224261.avif');
+    background-image: url('../images/—Pngtree—back to school day linear_1155214.png');
     /*
     background-color: #F8C8DC;
     */
