--- a/style/css/yes_styles.css
+++ b/style/css/yes_styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #F8C8DC;
-    background-image: url('../images/cat_background.jpg');
+    background-image: url('../images/10784041.jpg');
 }
 
 .header_text{
