--- a/style/css/yes_styles.css
+++ b/style/css/yes_styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     background-color: #F8C8DC;
-    background-image: url('https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMzNjMDl6MXdrN3BpejZkNGgwdWV3NDNqOGV3cGVjYWxpNjg2dHE1MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/jS2pgTIhhTuAqneaF0/giphy.gif');
+    background-image: url('../images/10784041.jpg');
 }
 
 .header_text{
